Fixed responsiveness on mobile and other small devices

--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@ img {
 }
 
 .container {
-  height: 100%;
   padding: 32px 24px;
 }
+
+
 
 .row {
   max-width: 1200px;
@@ -176,21 +177,21 @@ nav {
 HEADER
 
 */
-.header__content {
-  margin-top: 90px;
-  height: 100%;
+
+.header__container {
+  height: calc(100vh - 175px);
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
-.header__title {
-  max-width: 700px;
-  width: 100%;
-  border-radius: 0px;
+.header__content {
+  width: 60%;
 }
 
 .header__input {
   margin-top: 24px;
-  max-width: 600px;
-  width: 100%;
+  width: 95%;
   position: relative;
   display: flex;
   align-items: center;
@@ -408,15 +409,8 @@ opacity: 0;
   HOME PAGE
 
   */
-
-  .header__content {
-    margin-top: 80px;
-    
-  }
-
-  .header__title {
-    max-width: 600px;
-    width: 100%;
+    .header__title {
+    font-size: 75px;
   }
 
   .search__result {
@@ -433,13 +427,19 @@ opacity: 0;
 }
 
 @media (max-width: 850px) {
+  .header__content {
+    width: 75%;
+  }
+  .header__title {
+    font-size: 70px;
+  }
+ 
   .menu__button--open {
     display: block;
   }
   .nav__links {
     display: none;
   }
-
   .search__result--background--info {
     height: 20%;
   }
@@ -451,6 +451,21 @@ opacity: 0;
   }
 
   @media (max-width: 650px) {
+    .header__content {
+      max-width: 600px;
+      margin: 0 auto;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      justify-content: center;
+  
+    }
+
+    .header__title {
+      font-size: 65px;
+    }
     .search__result {
       width: 90%;
       margin-bottom: 16px
